--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -7,7 +7,7 @@
     remote:        data-remote
 -%>
 <li>
-  <%= link_to url, :rel => 'next', :remote => remote do %>
+  <%= link_to url, :rel => 'next', :remote => remote ,title: "下一頁" do %>
     <i class="fa fa-angle-right"></i>
   <% end %>
 </li>
