--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -7,7 +7,7 @@
     remote:        data-remote
 -%>
 <li>
-  <%= link_to url, :rel => 'prev', :remote => remote do %>
+  <%= link_to url, :rel => 'prev', :remote => remote ,title: "上一頁" do %>
     <i class="fa fa-angle-left"></i>
   <% end %>
 </li>
