--- a/app/views/statics/size.html.erb
+++ b/app/views/statics/size.html.erb
@@ -1,5 +1,5 @@
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'SIZE', 'javascript:void(0);' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; SIZE
 <% end %>
   <link rel="stylesheet" href="/css/pageSize.css">
   <div class="xlg-margin"></div><!-- Space 間隔 -->
