--- a/app/views/statics/terms.html.erb
+++ b/app/views/statics/terms.html.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/pagePrivacy.css">
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'TERMS & CONDITIONS', 'javascript:void(0);' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; TERMS &amp; CONDITIONS
 <% end %>
 
 
