--- a/app/views/announcements/index.html.erb
+++ b/app/views/announcements/index.html.erb
@@ -1,8 +1,8 @@
 <link rel="stylesheet" href="/css/pageAbout.css">
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'ABOUT US', page_pages_path('about') %>
-  &nbsp; > &nbsp; <%= link_to '最新消息', 'javascript:void(0);' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'ABOUT US', page_pages_path('about'), title: '品牌精神' %>
+  &nbsp; > &nbsp; NEWS
 <% end %>
 
 <div class="xlg-margin"></div><!-- Space 間隔 -->
