--- a/app/views/cart/check.html.erb
+++ b/app/views/cart/check.html.erb
@@ -1,3 +1,7 @@
+<% content_for :breadcrumb do %>
+<%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; YOUR CART
+<% end %>
+
   <div class="xlg-margin"></div><!-- Space 間隔-->
   <div class="container">
     <header class="content-title"><!-- Start .content-title 標題 -->
