--- a/app/views/cart/finish.html.erb
+++ b/app/views/cart/finish.html.erb
@@ -1,3 +1,6 @@
+<% content_for :breadcrumb do %>
+<%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; YOUR CART
+<% end %>
 
 <div class="xlg-margin"></div><!-- Space 間隔-->
 
