--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/pageAbout.css">
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'ABOUT US', 'javascript:void(0);' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; ABOUT US
 <% end %>
 
 <div class="xlg-margin"></div><!-- Space 間隔 -->
