--- a/app/views/statics/privacy.html.erb
+++ b/app/views/statics/privacy.html.erb
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/pagePrivacy.css">
 
 <% content_for :breadcrumb do %>
-  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'PRIVACY', 'javascript:void(0);' %>
+  <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; PRIVACY
 <% end %>
 
 <div class="xlg-margin"></div><!-- Space 間隔 -->
