--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,5 +1,9 @@
 <link rel="stylesheet" href="/css/pageLogin.css">
 
+<% content_for :breadcrumb do %>
+<%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; FORGOTTEN PASSWORD
+<% end %>
+
 <div class="xlg-margin"></div>
 <div id="lookbook">
 <div class="container">
